test/scripted/compilation2/errors/cannot_coerce_string_literal.bnj
# test:subtest
# test:error 5:18 "cannot coerce string literal to type 'i32'"

func main() {
    var a: i32 = "Hi!";
}

# test:subtest
# test:error 14:16 "cannot coerce string literal to type 'S'"

struct S {}

func main() {
    var a: S = "Hi!";
}
